# video-processing-lab-ufabc

./: .gitignore  CMakeLists.txt  ConvertFormatImage.cpp  DisplayImage.cpp  Dockerfile  README.md  docker-compose-rmtp.yml  docker-compose.yml  guide.sh  install-deps.sh  requirements.txt
reading_writing_videos_in_opencv/Python/: video_read_from_file.py  video_read_from_webcam.py  video_write_from_webcam.py
